--- a/package.json
+++ b/package.json
@@ -1,33 +1,58 @@
 {
-  "name": "todo-list",
+  "name": "to-do-list",
   "version": "1.0.0",
-  "description": "<a name=\"readme-top\"></a>",
-  "private": true,
+  "description": "",
+  "main": "index.js",
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js"
+    },
+    "resetMocks": false,
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open",
-    "build": "webpack"
+    "test": "jest",
+    "build": "webpack",
+    "dev": "webpack serve",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/collins-kiprotich/Todo-List.git"
+    "url": "git+https://github.com/rbhatt1999/to-do-list.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "homepage": "https://rbhatt1999.github.io/to-do-list",
   "bugs": {
-    "url": "https://github.com/collins-kiprotich/Todo-List/issues"
+    "url": "https://github.com/rbhatt1999/to-do-list/issues"
   },
-  "homepage": "https://github.com/collins-kiprotich/Todo-List#readme",
   "devDependencies": {
-    "css-loader": "^6.7.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "babel-eslint": "^10.1.0",
+    "css-loader": "^6.7.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "file-loader": "^6.2.0",
+    "hint": "^7.1.3",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-localstorage-mock": "^2.4.22",
     "style-loader": "^3.3.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "gh-pages": "^4.0.0"
   }
 }
